fix(editor): Show dropdown scrollbars only when appropriate (#13562)

--- a/packages/design-system/src/css/scrollbar.scss
+++ b/packages/design-system/src/css/scrollbar.scss
@@ -15,7 +15,7 @@
 	}
 
 	@include mixins.e(wrap) {
-		overflow: scroll;
+		overflow: auto;
 		height: 100%;
 	}
 
